Fixing overflowing tables for medium screens

--- a/app/css/bootstrap_override.css
+++ b/app/css/bootstrap_override.css
@@ -12,3 +12,24 @@
 .table>thead>tr>th.sort {
   padding-right: 20px;
 }
+.table-responsive {
+  width: 100%;
+  overflow-y: hidden;
+  overflow-x: auto;
+}
+@media (max-width: 991px) {
+  .table-responsive {
+    width: 100%;
+    margin-bottom: 15px;
+    overflow-y: hidden;
+    overflow-x: scroll;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
+    border: 1px solid #ddd;
+    -webkit-overflow-scrolling: touch;
+  }
+}
+@media (max-width: 991px) {
+  .table-responsive>.table>thead>tr>th, .table-responsive>.table>tbody>tr>th, .table-responsive>.table>tfoot>tr>th, .table-responsive>.table>thead>tr>td, .table-responsive>.table>tbody>tr>td, .table-responsive>.table>tfoot>tr>td {
+    white-space: nowrap;
+  }
+}
